styles/scss/styles.scss
$red: #d35266;
$grey: #888;
$black: #383838;
$font-g: 'Montserrat', sans-serif;
$font-h: 'Roboto', sans-serif;

html {
  overflow-x: hidden;
  max-width: 100%;
}

.font-1 {
  font-family: $font-g;
}

.font-2 {
  font-family: $font-h;
}

.bg-light-grey {
  background-color: rgb(226, 226, 226);
}

.bg-red {
  background-color: $red;
}

.color-red {
  color: $red;
}

.bg-grey {
  background-color: $grey;
}

.color-grey {
  color: $grey;
}

.bg-black {
  background-color: $black;
}

.color-black {
  color: $black;
}

.nav {
  display: flex;
  background-color: $black;
}

.nav-1 {
  display: flex;
  justify-content: center;
  align-items: center;
  flex: 1;
  font-size: 13px;

  h2 {
    font-size: 13px;
    margin-top: 5px;
  }
}

.nav-2 {
  display: flex;
  justify-content: space-around;
  flex: 3;
  font-size: 12px;
  margin-top: 5px;
}

.nav-3 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex: 1;
}

.nav-4 {
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex: 1;
}

.link-hover {
  transition: all 1s;
}

.link-hover:hover {
  color: $red;
}

.nav-btn-hover {
  background-color: $red;
  color: white;
  transition: all 1s;
}

.nav-btn-hover:hover {
  color: black;
  background-color: #d1203b;
}

.form-btn-hover {
  background-color: $black;
  color: white;
  transition: all 1s;
}

.form-btn-hover:hover {
  background-color: white;
  color: black;
}

.hot-ads-hover {
  border: 1px solid $black;
  border-radius: 50%;
  transition: all 0.5s;
}

.hot-ads-hover:hover {
  background-color: $black;
}

.hot-ads-text {
  font-size: 12px;
}

.hot-ads-img {
  background: url(https://cdn.akamai.steamstatic.com/steam/apps/814380/header.jpg?t=1603904569) no-repeat;
  background-size: cover;
  background-position: center;
}

.arrow-hover {
  transition: all 0.5s;
}

.arrow-hover:hover {
  color: $red;
  cursor: pointer;
}

.plus-hover {
  transition: all 1s;
}

.plus-hover:hover {
  color: black;
  transform: scale(1.3);
  cursor: pointer;
}

.check-border {
  border-bottom: 1px solid $black;
  margin: 5px;
  padding-bottom: 5px;
}

.ad-sub {
  font-size: 13px;
}

.ad-p-1 {
  font-size: 18px;
}

.ad-p-2 {
  font-size: 10px;
}

.footer-title {
  border-bottom: 1px solid $red;
}

footer {
  margin-top: 100px;
}

.footer-2 {
  justify-content: center;
}

.results-img-1 {
  background: url(https://cdn.akamai.steamstatic.com/steam/apps/945360/header.jpg?t=1611793703) no-repeat;
}

.results-img-2 {
  background: url(https://cdn.akamai.steamstatic.com/steam/apps/960090/header.jpg?t=1612862372) no-repeat;
}

.results-img-3 {
  background: url(https://cdn.akamai.steamstatic.com/steam/apps/239140/header_alt_assets_31.jpg?t=1615288599) no-repeat;
}

.results-img-4 {
  background: url(https://cdn.akamai.steamstatic.com/steam/apps/1250410/header.jpg?t=1612391267) no-repeat;
}

.results-img-5 {
  background: url(https://cdn.akamai.steamstatic.com/steam/apps/271590/header.jpg?t=1592866696) no-repeat;
}

.results-img-6 {
  background: url(https://cdn.akamai.steamstatic.com/steam/apps/1145360/header.jpg?t=1613153824) no-repeat;
}

.results-img-7 {
  background: url(https://cdn.akamai.steamstatic.com/steam/apps/1282730/header.jpg?t=1615042098) no-repeat;
}

.results-img-8 {
  background: url(https://cdn.akamai.steamstatic.com/steam/apps/582010/header.jpg?t=1613693233) no-repeat;
}

.results-img-9 {
  background: url(https://cdn.akamai.steamstatic.com/steam/apps/413150/header.jpg?t=1608624324) no-repeat;
}

.results-img-0 {
  background: url(https://cdn.akamai.steamstatic.com/steam/apps/105600/header.jpg?t=1590092560) no-repeat;
}

.results-img,
.results-img-1,
.results-img-2,
.results-img-3,
.results-img-4,
.results-img-5,
.results-img-6,
.results-img-7,
.results-img-8,
.results-img-9,
.results-img-0 {
  background-size: cover;
  background-position: center;
  width: 310px;
  height: 200px;
}

@media (min-width: 375px) {
  .results-img,
  .results-img-1,
  .results-img-2,
  .results-img-3,
  .results-img-4,
  .results-img-5,
  .results-img-6,
  .results-img-7,
  .results-img-8,
  .results-img-9,
  .results-img-0 {
    background-size: cover;
    background-position: center;
    width: 360px;
    height: 200px;
  }
}

@media (min-width: 425px) {
  .results-img,
  .results-img-1,
  .results-img-2,
  .results-img-3,
  .results-img-4,
  .results-img-5,
  .results-img-6,
  .results-img-7,
  .results-img-8,
  .results-img-9,
  .results-img-0 {
    background-size: cover;
    background-position: center;
    width: 410px;
    height: 200px;
  }
}

@media (min-width: 768px) {
  .footer-2 {
    justify-content: space-between;
  }

  .nav-1 {
    font-size: 25px;

    h2 {
      font-size: 25px;
    }
  }

  .nav-2 {
    font-size: 20px;
  }

  .nav-3 {
    font-size: 20px;
  }

  .search-div {
    padding-left: 80px;
  }

  .flex {
    display: flex;
  }

  .search-img {
    width: 200px;
    flex: 1;
  }

  .search-txt-div {
    flex: 3;
    font-size: 10px;
  }

  .result-txt {
    font-size: 13px;
  }

  .form-txt {
    font-size: 22px;
  }

  .results-img,
  .results-img-1,
  .results-img-2,
  .results-img-3,
  .results-img-4,
  .results-img-5,
  .results-img-6,
  .results-img-7,
  .results-img-8,
  .results-img-9,
  .results-img-0 {
    background-size: cover;
    background-position: center;
    height: 300px;
    width: 200px;
  }
}

@media (min-width: 1024px) {
  .search-div {
    padding-left: 220px;
  }

  .search-img {
    width: 320px;
    height: 100%;
    flex: 1;
  }

  .hot-ads-img {
    background: url(https://cdn.akamai.steamstatic.com/steam/apps/814380/header.jpg?t=1603904569) no-repeat;
    background-size: cover;
    background-position: center;
    height: 500px;
  }

  .hot-ads-text {
    font-size: 20px;
  }

  .result-txt {
    font-size: 16px;
  }

  .results-img,
  .results-img-1,
  .results-img-2,
  .results-img-3,
  .results-img-4,
  .results-img-5,
  .results-img-6,
  .results-img-7,
  .results-img-8,
  .results-img-9,
  .results-img-0 {
    background-size: cover;
    background-position: center;
    width: 300px;
    height: 350px;
  }
}

@media (min-width: 1440px) {
  .search-div {
    padding-left: 420px;
  }

  .result-txt {
    font-size: 16px;
  }

  .results-img,
  .results-img-1,
  .results-img-2,
  .results-img-3,
  .results-img-4,
  .results-img-5,
  .results-img-6,
  .results-img-7,
  .results-img-8,
  .results-img-9,
  .results-img-0 {
    background-size: cover;
    background-position: center;
    width: 450px;
    height: 280px;
  }
}

@media (min-width: 1600px) {
  .search-div {
    padding-left: 640px;
  }
}

